--- a/ticketing-app/package.json
+++ b/ticketing-app/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
+    "body-parse": "^0.1.0",
+    "express": "^4.16.4",
+    "pg": "^7.8.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3"
